tests/valid/03_float_cast_len.ml
int main() {
    int32 x = 5;
    float64 y = cast<float64>(x);

    string s = "hello";
    int32 n = len(s);

    print("y = ", y);
    print("len = ", n);

    return 0;
}
