tests/invalid/04_bad_cast.ml
int main() {
    string s = "123";
    int32 x = cast<int32>(s);

    return x;
}
